package com.unisul.product_storage.models;

public enum MovementType {
    ENTRY,
    EXIT
}
